--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               <article class="tile is-child notification is-primary" id="hardware">
                 <p class="title">Detalhes do hardware</p>
               </article>
-              <article class="tile is-child notification is-warning">
+              <article class="tile is-child notification is-warning" id="shell">
                 <p class="title">Abrir terminal</p>
               </article>
             </div>
