adicionado abrir terminal no mint

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <p class="title">Detalhes do hardware</p>
               </article>
               <article class="tile is-child notification is-warning" id="shell">
-                <p class="title">Abrir terminal</p>
+                <p class="title">Abrir terminal(somente linux)</p>
               </article>
             </div>
             <div class="tile is-parent">
