--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
                 <p class="title">Detalhes do hardware</p>
               </article>
               <article class="tile is-child notification is-warning" id="shell">
-                <p class="title">Abrir terminal(somente linux)</p>
+                <p class="title">Abrir terminal(linux gnome)</p>
               </article>
             </div>
             <div class="tile is-parent">
-              <article class="tile is-child notification is-info">
-                <p class="title">Middle tile</p>
-                <p class="subtitle">With an image</p>
+              <article class="tile is-child notification is-info" id="desempenho">
+                <p class="title">Desempenho</p>
                 <figure class="image is-4by3">
                   <img src="https://bulma.io/images/placeholders/640x480.png">
                 </figure>
