--- a/pages/detalhes/detalhesSO.html
+++ b/pages/detalhes/detalhesSO.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="detalhesSO.css">
     <script src="./detalhesSO.js" defer></script>
-    <script src="../node_modules/@vizuaalog/bulmajs/dist/tabs.js"></script>
+    <script src="../../node_modules/@vizuaalog/bulmajs/dist/tabs.js"></script>
 
 </head>
 
 <body>
-    <button class="button is-rounded"><a href="../index.html">
+    <button class="button is-rounded"><a href="../../index.html">
             <h1>Voltar</h1>
         </a></button>
     <div class="tabs-wrapper is-centered">
