--- a/pages/desempenho/desempenho.html
+++ b/pages/desempenho/desempenho.html
@@ -8,22 +8,23 @@
     <link rel="stylesheet" href="desempenho.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="../../node_modules/@vizuaalog/bulmajs/dist/tabs.js"></script>
-    <script src="./desempenho.js" defer></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="./desempenho.js"></script>
+    
 </head>
 
 <body>
     <button class="button is-rounded"><a href="../../index.html">
             <h1>Voltar</h1>
         </a></button>
-    <div class="container" style="text-align: center;">
+    <div class="container">
         <h2 class="title">Desempenho da CPU</h2>
-        <div id="chart_div_cpu_load"></div>
+        <div id="chart_div_cpu_load"  style="height: 20rem;"></div>
         <p>Uso da cpu está em <span id="uso_cpu_span"></span> no segundo <span id="tempo_cpu_span"></span></p>
     </div>
-    <div class="container" style="text-align: center;">
+    <div class="container" >
         <h2 class="title">Desempenho de cada núcleo</h2>
-        <div id="chart_div_cpu_load_nucleo"></div>
+        <div id="chart_div_cpu_load_nucleo" style="height: 20rem;"></div>
     </div>
 </body>
 
