--- a/index.html
+++ b/index.html
@@ -1,45 +1,72 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dashboard?</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  </head>
-  <body>
-    <div class="tile is-ancestor">
-        <div class="tile is-vertical is-8">
-          <div class="tile">
-            <div class="tile is-parent is-vertical">
-              <article class="tile is-child notification is-primary" id="hardware">
-                <p class="title">Detalhes do hardware</p>
-              </article>
-              <article class="tile is-child notification is-warning" id="shell">
-                <p class="title">Abrir terminal(linux gnome)</p>
-              </article>
-            </div>
-            <div class="tile is-parent">
-              <article class="tile is-child notification is-info" id="desempenho">
-                <p class="title">Desempenho</p>
-                <figure class="image is-4by3">
-                  <img src="https://bulma.io/images/placeholders/640x480.png">
-                </figure>
-              </article>
-            </div>
-          </div>
-          
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dashboard?</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      let openShell = OS.getShell();
+      document.getElementById("btnShell").addEventListener("click", () => openShell())
+    })
+  </script>
+</head>
+
+<body>
+  <div class="tile is-ancestor">
+    <div class="tile is-vertical is-8">
+      <div class="tile">
+        <div class="tile is-parent is-vertical">
+
+          <article class="tile is-child box">
+            <p class="title">Detalhes do hardware</p>
+            <p class="subtitle">Alguns dados estáticos</p>
+              
+            <footer class="card-footer">
+              <a href="./pages/detalhes/detalhesSO.html" class="card-footer-item button is-outlined">Acessar</a>
+            </footer>
+          </article>
+
+          <article class="tile is-child box">
+            <p class="title">Abrir terminal</p>
+            <p class="subtitle">Somente linux Mint ou distribuição que usa gnomeshell</p>
+            <footer class="card-footer">
+              <button id="btnShell" class="card-footer-item button is-outlined">Abrir</button>
+            </footer>
+          </article>
         </div>
         <div class="tile is-parent">
-          <article class="tile is-child notification is-success">
-            <div class="content">
-              <p class="title">Tall tile</p>
-              <p class="subtitle">With even more content</p>
-              <div class="content">
-                <!-- Content -->
-              </div>
+          <article class="tile is-child box"
+            style="display: flex; flex-direction: column; justify-content: space-between;">
+            <div class="header">
+              <p class="title">Desempenho CPU</p>
+              <p class="subtitle">Monitorar uso da CPU e seus núcleos por segundo</p>
             </div>
+            <footer class="card-footer">
+              <a href="./pages/desempenhoCPU/desempenhoCPU.html"
+                class="card-footer-item button is-outlined">Monitorar</a>
+            </footer>
           </article>
         </div>
       </div>
-  </body>
+
+    </div>
+    <div class="tile is-parent">
+
+      <article class="tile is-child box" style="display: flex; flex-direction: column; justify-content: space-between;">
+        <div class="header">
+          <p class="title">Desempenho memória</p>
+          <p class="subtitle">Monitorar uso da memória ram e uso do disco</p>
+        </div>
+        <footer class="card-footer">
+          <a href="./pages/desempenhoMem/desempenhoMem.html" class="card-footer-item button is-outlined">Monitorar</a>
+        </footer>
+      </article>
+
+    </div>
+  </div>
+</body>
+
 </html>
