--- a/pages/desempenhoCPU/desempenhoCPU.html
+++ b/pages/desempenhoCPU/desempenhoCPU.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hardware</title>
-    <link rel="stylesheet" href="desempenho.css">
+    <link rel="stylesheet" href="./desempenhoCPU.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="../../node_modules/@vizuaalog/bulmajs/dist/tabs.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="./desempenho.js"></script>
+    <script src="./desempenhoCPU.html"></script>
     
 </head>
 
