adicionado grafico memoria swap

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div class="container" style="margin-top: 20px;">
   <div class="tile is-ancestor">
     <div class="tile is-vertical is-8">
       <div class="tile">
@@ -23,7 +24,7 @@
           <article class="tile is-child box">
             <p class="title">Detalhes do hardware</p>
             <p class="subtitle">Alguns dados estáticos</p>
-              
+
             <footer class="card-footer">
               <a href="./pages/detalhes/detalhesSO.html" class="card-footer-item button is-outlined">Acessar</a>
             </footer>
@@ -58,7 +59,7 @@
       <article class="tile is-child box" style="display: flex; flex-direction: column; justify-content: space-between;">
         <div class="header">
           <p class="title">Desempenho memória</p>
-          <p class="subtitle">Monitorar uso da memória ram e uso do disco</p>
+          <p class="subtitle">Monitorar uso da memória ram e memória virtual</p>
         </div>
         <footer class="card-footer">
           <a href="./pages/desempenhoMem/desempenhoMem.html" class="card-footer-item button is-outlined">Monitorar</a>
@@ -66,7 +67,7 @@
       </article>
 
     </div>
-  </div>
+  </div></div>
 </body>
 
 </html>
