--- a/pages/desempenhoMem/desempenhoMem.html
+++ b/pages/desempenhoMem/desempenhoMem.html
@@ -24,8 +24,10 @@
         <p>Tamanho da memória RAM em GB <span id="tamanho_ram_span"></span> quantidade disponivel <span id="disponivel_ram_span"></span></p>
     </div>
     <div class="container" >
-        <h2 class="title">Uso do Disco</h2>
-        <div id="chart_div_cpu_load_nucleo" style="height: 20rem;"></div>
+        <h2 class="title">Uso da memória swap</h2>
+        <div id="chart_div_swap" style="height: 20rem;"></div>
+        <p>Uso da memória virtual está em <span id="uso_swap_span"></span> no segundo <span id="tempo_swap_span"></span></p>
+        <p>Quantidade alocada para memória SWAP é de <span id="tamanho_swap_span"></span> quantidade livre é de<span id="disponivel_swap_span"></span></p>
     </div>
 </body>
 
