--- a/pages/desempenhoCPU/desempenhoCPU.html
+++ b/pages/desempenhoCPU/desempenhoCPU.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="../../node_modules/@vizuaalog/bulmajs/dist/tabs.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="./desempenhoCPU.html"></script>
+    <script src="./desempenhoCPU.js"></script>
     
 </head>
 
