--- a/index.html
+++ b/index.html
@@ -16,58 +16,68 @@
 
 <body>
   <div class="container" style="margin-top: 20px;">
-  <div class="tile is-ancestor">
-    <div class="tile is-vertical is-8">
-      <div class="tile">
-        <div class="tile is-parent is-vertical">
-
-          <article class="tile is-child box">
-            <p class="title">Detalhes do hardware</p>
-            <p class="subtitle">Alguns dados estáticos</p>
-
-            <footer class="card-footer">
-              <a href="./pages/detalhes/detalhesSO.html" class="card-footer-item button is-outlined">Acessar</a>
-            </footer>
-          </article>
-
-          <article class="tile is-child box">
-            <p class="title">Abrir terminal</p>
-            <p class="subtitle">Somente linux Mint ou distribuição que usa gnomeshell</p>
-            <footer class="card-footer">
-              <button id="btnShell" class="card-footer-item button is-outlined">Abrir</button>
-            </footer>
-          </article>
-        </div>
-        <div class="tile is-parent">
-          <article class="tile is-child box"
-            style="display: flex; flex-direction: column; justify-content: space-between;">
-            <div class="header">
-              <p class="title">Desempenho CPU</p>
-              <p class="subtitle">Monitorar uso da CPU e seus núcleos por segundo</p>
-            </div>
-            <footer class="card-footer">
-              <a href="./pages/desempenhoCPU/desempenhoCPU.html"
-                class="card-footer-item button is-outlined">Monitorar</a>
-            </footer>
-          </article>
+    <div class="tile is-ancestor">
+      <div class="tile is-vertical is-8">
+        <div class="tile">
+          <div class="tile is-parent is-vertical">
+            <article class="tile is-child box">
+              <p class="title">Detalhes do hardware</p>
+              <p class="subtitle">Alguns dados estáticos</p>
+              <footer class="card-footer">
+                <a href="./pages/detalhes/detalhesSO.html" class="card-footer-item button is-outlined">Acessar</a>
+              </footer>
+            </article>
+            <article class="tile is-child box">
+              <p class="title">Abrir terminal</p>
+              <p class="subtitle">Somente linux Mint ou distribuição que usa gnomeshell</p>
+              <footer class="card-footer">
+                <button id="btnShell" class="card-footer-item button is-outlined">Abrir</button>
+              </footer>
+            </article>
+          </div>
+          <div class="tile is-parent">
+            <article class="tile is-child box"
+              style="display: flex; flex-direction: column; justify-content: space-between;">
+              <div class="header">
+                <p class="title">Desempenho CPU</p>
+                <p class="subtitle">Monitorar uso da CPU e seus núcleos por segundo</p>
+              </div>
+              <footer class="card-footer">
+                <a href="./pages/desempenhoCPU/desempenhoCPU.html"
+                  class="card-footer-item button is-outlined">Monitorar</a>
+              </footer>
+            </article>
+          </div>
         </div>
       </div>
-
+      <div class="tile is-parent">
+        <article class="tile is-child box"
+          style="display: flex; flex-direction: column; justify-content: space-between;">
+          <div class="header">
+            <p class="title">Desempenho memória</p>
+            <p class="subtitle">Monitorar uso da memória ram e memória virtual</p>
+          </div>
+          <footer class="card-footer">
+            <a href="./pages/desempenhoMem/desempenhoMem.html" class="card-footer-item button is-outlined">Monitorar</a>
+          </footer>
+        </article>
+      </div>
     </div>
-    <div class="tile is-parent">
 
-      <article class="tile is-child box" style="display: flex; flex-direction: column; justify-content: space-between;">
-        <div class="header">
-          <p class="title">Desempenho memória</p>
-          <p class="subtitle">Monitorar uso da memória ram e memória virtual</p>
-        </div>
-        <footer class="card-footer">
-          <a href="./pages/desempenhoMem/desempenhoMem.html" class="card-footer-item button is-outlined">Monitorar</a>
-        </footer>
-      </article>
-
+    <div class="tile is-ancestor">
+      <div class="tile is-12 is-vertical">
+        <article class="tile is-child box"
+          style="display: flex; flex-direction: column; justify-content: space-between;">
+          <div class="header">
+            <p class="title">Processos</p>
+            <p class="subtitle">Visualização dos processos em execução</p>
+          </div>
+          <footer class="card-footer">
+            <a href="./pages/processos/processos.html" class="card-footer-item button is-outlined">Visualizar</a>
+          </footer>
+        </article>
+      </div>
     </div>
-  </div></div>
 </body>
 
 </html>
