--- a/pages/processos/processos.html
+++ b/pages/processos/processos.html
@@ -7,10 +7,7 @@
     <title>Processos</title>
     <link rel="stylesheet" href="./processos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <script src="../../node_modules/@vizuaalog/bulmajs/dist/tabs.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="./processos.js"></script>
-
 </head>
 
 <body>
@@ -22,29 +19,27 @@
             <progress class="progress is-small is-info" max="100"></progress>
         </h2>
     </div>
-
-    <table class="table is-bordered is-striped is-fullwidth">
-
-        <thead>
-            <tr>
-                <th>PID</th>
-                <th><abbr title="PID do parente">PPID</abbr></th>
-                <th>Nome</th>
-                <th><abbr title="% De uso da CPU">CPU</abbr></th>
-                <th><abbr title="% De uso CPU USER">UsCPU</abbr></th>
-                <th><abbr title="% De uso CPU SYSTEM">SYSCPU</abbr></th>
-                <th><abbr title="% de Uso memoria">MEM</abbr></th>
-                <th><abbr title="Prioridade">Prior</abbr></th>
-                <th><abbr title="Memoria virtual">VMEM</abbr></th>
-                <th>Nice</th>
-                <th><abbr title="Estado do processo">State</abbr></th>
-            </tr>
-        </thead>
-        <tbody id="tableBody">
-
-
-        </tbody>
-    </table>
+    <div class="table-container">
+        <table class="table is-bordered is-striped is-fullwidth">
+            <thead>
+                <tr>
+                    <th>PID</th>
+                    <th><abbr title="PID do parente">PPID</abbr></th>
+                    <th>Nome</th>
+                    <th><abbr title="% De uso da CPU">CPU</abbr></th>
+                    <th><abbr title="% De uso CPU USER">UsCPU</abbr></th>
+                    <th><abbr title="% De uso CPU SYSTEM">SYSCPU</abbr></th>
+                    <th><abbr title="% de Uso memoria">MEM</abbr></th>
+                    <th><abbr title="Prioridade">Prior</abbr></th>
+                    <th><abbr title="Memoria virtual">VMEM</abbr></th>
+                    <th>Nice</th>
+                    <th><abbr title="Estado do processo">State</abbr></th>
+                </tr>
+            </thead>
+            <tbody id="tableBody">
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
