adicionado dependencia shelljs, implementado kill pid e killall

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           style="display: flex; flex-direction: column; justify-content: space-between;">
           <div class="header">
             <p class="title">Processos</p>
-            <p class="subtitle">Visualização dos processos em execução. <i>(% da cpu bugada no windows)</i></p>
+            <p class="subtitle">Visualização dos processos em execução. <i>(% da cpu bugada no windows e matar processo também)</i></p>
           </div>
 
           <!--<p>Campos visiveis</p>
