--- a/pages/desempenhoMem/desempenhoMem.html
+++ b/pages/desempenhoMem/desempenhoMem.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="./desempenhoMem.js"></script>
-    
+
 </head>
 
 <body>
@@ -18,15 +18,18 @@
         </a></button>
     <div class="container">
         <h2 class="title">Uso da memória RAM </h2>
-        <div id="chart_div_ram_load"  style="height: 20rem;"></div>
+        <div id="chart_div_ram_load" style="height: 20rem;"></div>
         <p>Uso da RAM está em <span id="uso_ram_span"></span> no segundo <span id="tempo_ram_span"></span></p>
-        <p>Tamanho da memória RAM em GB <span id="tamanho_ram_span"></span> quantidade disponivel <span id="disponivel_ram_span"></span></p>
+        <p>Tamanho da memória RAM em GB <span id="tamanho_ram_span"></span> quantidade disponivel <span
+                id="disponivel_ram_span"></span></p>
     </div>
-    <div class="container" >
+    <div class="container">
         <h2 class="title">Uso da memória swap</h2>
         <div id="chart_div_swap" style="height: 20rem;"></div>
-        <p>Uso da memória virtual está em <span id="uso_swap_span"></span> no segundo <span id="tempo_swap_span"></span></p>
-        <p>Quantidade alocada para memória SWAP é de <span id="tamanho_swap_span"></span> quantidade livre é de<span id="disponivel_swap_span"></span></p>
+        <p>Uso da memória virtual está em <span id="uso_swap_span"></span> no segundo <span id="tempo_swap_span"></span>
+        </p>
+        <p>Quantidade alocada para memória SWAP é de <span id="tamanho_swap_span"></span> quantidade livre é de<span
+                id="disponivel_swap_span"></span></p>
     </div>
 </body>
 
