--- a/pages/internet/internet.html
+++ b/pages/internet/internet.html
@@ -24,7 +24,7 @@
             </h2>
         </div>
     </div>
-    <h2 class="title">Network ethernet </h2>
+    <h2 class="title">Network</h2>
     <div class="table-container">
         <table class="table is-bordered is-striped is-fullwidth">
             <thead>
